--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,12 +37,12 @@ Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 Style/CaseEquality:
   Enabled: false
-#Style/GuardClause:
-  #Enabled: false
-#Style/MultipleComparison:
-  #Enabled: false
-#Lint/UselessAssignment:
-  #Enabled: false
+Style/GuardClause:
+  Enabled: false
+Style/MultipleComparison:
+  Enabled: false
+Lint/UselessAssignment:
+  Enabled: false
 Layout/HashAlignment:
   EnforcedColonStyle: key
 Layout/ExtraSpacing:
